update requirements prod

--- a/src/generic/main.ipynb
+++ b/src/generic/main.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-05T12:56:06.690973Z",
-     "start_time": "2025-06-05T12:56:06.687191Z"
+     "end_time": "2025-06-08T12:46:55.376209Z",
+     "start_time": "2025-06-08T12:46:55.368994Z"
     }
    },
    "source": [
@@ -25,8 +25,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-05T13:06:16.818880Z",
-     "start_time": "2025-06-05T13:06:03.427378Z"
+     "end_time": "2025-06-08T12:47:08.316454Z",
+     "start_time": "2025-06-08T12:46:55.445800Z"
     }
    },
    "cell_type": "code",
@@ -59,72 +59,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-05 15:06:03,852 - src.generic.algo - INFO - Setting up initial positions...\n",
-      "2025-06-05 15:06:03,853 - src.generic.algo - INFO - Setting leverage to 30 for cross margin trading\n"
+      "2025-06-08 14:46:55,952 - src.generic.algo - INFO - Setting up initial positions...\n",
+      "2025-06-08 14:46:55,954 - src.generic.algo - INFO - Setting leverage to 30 for cross margin trading\n",
+      "2025-06-08 14:47:03,163 - src.generic.algo - INFO - Available amount to trade: 727.771434 - Current price: 105693.0 - Single position quantity : 0.001147618470475812\n",
+      "2025-06-08 14:47:03,165 - src.generic.cctx_api - INFO - Buying 0.00573809235237906 at market price : 105693.0\n",
+      "2025-06-08 14:47:03,166 - src.generic.cctx_api - INFO - api - Creating buy market order: 0.00573809235237906 at 105693.0\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[MAPPER] Tentative de parsing AccountData avec data={'info': {'marginSummary': {'accountValue': '709.420985', 'totalNtlPos': '0.0', 'totalRawUsd': '709.420985', 'totalMarginUsed': '0.0'}, 'crossMarginSummary': {'accountValue': '709.420985', 'totalNtlPos': '0.0', 'totalRawUsd': '709.420985', 'totalMarginUsed': '0.0'}, 'crossMaintenanceMarginUsed': '0.0', 'withdrawable': '709.420985', 'assetPositions': [], 'time': '1749128768067'}, 'USDC': {'total': 709.420985, 'free': 709.420985, 'used': 0.0}, 'timestamp': 1749128768067, 'datetime': '2025-06-05T13:06:08.067Z', 'free': {'USDC': 709.420985}, 'used': {'USDC': 0.0}, 'total': {'USDC': 709.420985}}\n"
+      "Initial buy quantity: 0.00573809235237906 - unit : 0.00573809235237906\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-05 15:06:11,673 - src.generic.algo - INFO - Available amount to trade: 709.420985 - Current price: 105940.0 - Single position quantity : 0.0011160735400541186\n",
-      "2025-06-05 15:06:11,678 - src.generic.cctx_api - INFO - Buying 0.0055803677002705925 at market price : 105940.0\n",
-      "2025-06-05 15:06:11,680 - src.generic.cctx_api - INFO - api - Creating buy market order: 0.0055803677002705925 at 105940.0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initial buy quantity: 0.0055803677002705925 - unit : 0.0055803677002705925\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-06-05 15:06:13,378 - src.generic.cctx_api - INFO - api - Creating buy limit order: 0.0011160735400541186 at 105840.0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[MAPPER] Tentative de parsing Order avec data={'info': {'order': {'coin': 'BTC', 'side': 'B', 'limitPx': '111237.0', 'sz': '0.0', 'oid': '33226765624', 'timestamp': '1749128772935', 'triggerCondition': 'N/A', 'isTrigger': False, 'triggerPx': '0.0', 'children': [], 'isPositionTpsl': False, 'reduceOnly': False, 'orderType': 'Limit', 'origSz': '0.00558', 'tif': 'Ioc', 'cloid': None}, 'status': 'filled', 'statusTimestamp': '1749128772935'}, 'id': '33226765624', 'clientOrderId': None, 'timestamp': 1749128772935, 'datetime': '2025-06-05T13:06:12.935Z', 'lastTradeTimestamp': None, 'lastUpdateTimestamp': 1749128772935, 'symbol': 'BTC/USDC:USDC', 'type': 'limit', 'timeInForce': 'IOC', 'postOnly': False, 'reduceOnly': False, 'side': 'buy', 'price': 111237.0, 'triggerPrice': None, 'amount': 0.00558, 'cost': 620.70246, 'average': None, 'filled': 0.00558, 'remaining': 0.0, 'status': 'closed', 'fee': None, 'trades': [], 'fees': [], 'stopPrice': None, 'takeProfitPrice': None, 'stopLossPrice': None}\n",
-      "[MAPPER] MissingValueError: missing value for field \"info.coin\"\n",
-      "[MAPPER] Nouvelle tentative de parsing Order avec data={'info': {'order': {'coin': 'BTC', 'side': 'B', 'limitPx': '111237.0', 'sz': '0.0', 'oid': '33226765624', 'timestamp': '1749128772935', 'triggerCondition': 'N/A', 'isTrigger': False, 'triggerPx': '0.0', 'children': [], 'isPositionTpsl': False, 'reduceOnly': False, 'orderType': 'Limit', 'origSz': '0.00558', 'tif': 'Ioc', 'cloid': None}, 'status': 'filled', 'statusTimestamp': '1749128772935', 'coin': '', 'side': '', 'limitPx': '', 'sz': '', 'oid': '', 'timestamp': '', 'triggerCondition': '', 'isTrigger': False, 'triggerPx': '', 'children': [], 'isPositionTpsl': False, 'reduceOnly': False, 'orderType': '', 'origSz': '', 'tif': '', 'cloid': ''}, 'id': '33226765624', 'clientOrderId': '', 'timestamp': 1749128772935, 'datetime': '2025-06-05T13:06:12.935Z', 'lastTradeTimestamp': 0, 'lastUpdateTimestamp': 1749128772935, 'symbol': 'BTC/USDC:USDC', 'type': 'limit', 'timeInForce': 'IOC', 'postOnly': False, 'reduceOnly': False, 'side': 'buy', 'price': 111237.0, 'triggerPrice': 0.0, 'amount': 0.00558, 'cost': 620.70246, 'average': 0.0, 'filled': 0.00558, 'remaining': 0.0, 'status': 'closed', 'fee': '', 'trades': [], 'fees': [], 'stopPrice': 0.0, 'takeProfitPrice': 0.0, 'stopLossPrice': 0.0}\n",
-      "0 --> in function create_open_long_order\n",
-      "0Creating open long order: 0.0011160735400541186 at 105840.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-06-05 15:06:15,006 - src.generic.cctx_api - INFO - api - Creating sell limit order: 0.0011160735400541186 at 106040.0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[MAPPER] Tentative de parsing Order avec data={'info': {'order': {'coin': 'BTC', 'side': 'B', 'limitPx': '105840.0', 'sz': '0.00112', 'oid': '33226767300', 'timestamp': '1749128774462', 'triggerCondition': 'N/A', 'isTrigger': False, 'triggerPx': '0.0', 'children': [], 'isPositionTpsl': False, 'reduceOnly': False, 'orderType': 'Limit', 'origSz': '0.00112', 'tif': 'Gtc', 'cloid': None}, 'status': 'open', 'statusTimestamp': '1749128774462'}, 'id': '33226767300', 'clientOrderId': None, 'timestamp': 1749128774462, 'datetime': '2025-06-05T13:06:14.462Z', 'lastTradeTimestamp': None, 'lastUpdateTimestamp': 1749128774462, 'symbol': 'BTC/USDC:USDC', 'type': 'limit', 'timeInForce': 'GTC', 'postOnly': False, 'reduceOnly': False, 'side': 'buy', 'price': 105840.0, 'triggerPrice': None, 'amount': 0.00112, 'cost': 0.0, 'average': None, 'filled': 0.0, 'remaining': 0.00112, 'status': 'open', 'fee': None, 'trades': [], 'fees': [], 'stopPrice': None, 'takeProfitPrice': None, 'stopLossPrice': None}\n",
-      "[MAPPER] MissingValueError: missing value for field \"info.coin\"\n",
-      "[MAPPER] Nouvelle tentative de parsing Order avec data={'info': {'order': {'coin': 'BTC', 'side': 'B', 'limitPx': '105840.0', 'sz': '0.00112', 'oid': '33226767300', 'timestamp': '1749128774462', 'triggerCondition': 'N/A', 'isTrigger': False, 'triggerPx': '0.0', 'children': [], 'isPositionTpsl': False, 'reduceOnly': False, 'orderType': 'Limit', 'origSz': '0.00112', 'tif': 'Gtc', 'cloid': None}, 'status': 'open', 'statusTimestamp': '1749128774462', 'coin': '', 'side': '', 'limitPx': '', 'sz': '', 'oid': '', 'timestamp': '', 'triggerCondition': '', 'isTrigger': False, 'triggerPx': '', 'children': [], 'isPositionTpsl': False, 'reduceOnly': False, 'orderType': '', 'origSz': '', 'tif': '', 'cloid': ''}, 'id': '33226767300', 'clientOrderId': '', 'timestamp': 1749128774462, 'datetime': '2025-06-05T13:06:14.462Z', 'lastTradeTimestamp': 0, 'lastUpdateTimestamp': 1749128774462, 'symbol': 'BTC/USDC:USDC', 'type': 'limit', 'timeInForce': 'GTC', 'postOnly': False, 'reduceOnly': False, 'side': 'buy', 'price': 105840.0, 'triggerPrice': 0.0, 'amount': 0.00112, 'cost': 0.0, 'average': 0.0, 'filled': 0.0, 'remaining': 0.00112, 'status': 'open', 'fee': '', 'trades': [], 'fees': [], 'stopPrice': 0.0, 'takeProfitPrice': 0.0, 'stopLossPrice': 0.0}\n",
-      "0 --> Open long order created: Order(info=Info(coin='', side='', limitPx='', sz='', oid='', timestamp='', triggerCondition='', isTrigger=False, triggerPx='', children=[], isPositionTpsl=False, reduceOnly=False, orderType='', origSz='', tif='', cloid=''), id='33226767300', clientOrderId='', timestamp=1749128774462, datetime='2025-06-05T13:06:14.462Z', lastTradeTimestamp=0, lastUpdateTimestamp=1749128774462, symbol='BTC/USDC:USDC', type='limit', timeInForce='GTC', postOnly=False, reduceOnly=False, side='buy', price=105840.0, triggerPrice=0.0, amount=0.00112, cost=0.0, average=0.0, filled=0.0, remaining=0.00112, status='open', fee='', trades=[], fees=[], stopPrice=0.0, takeProfitPrice=0.0, stopLossPrice=0.0)\n",
-      "0 --> in function create_close_long_order\n",
-      "0 --> Creating close long order: 0.0011160735400541186 at 106040.0\n",
-      "[MAPPER] Tentative de parsing Order avec data={'info': {'order': {'coin': 'BTC', 'side': 'A', 'limitPx': '106040.0', 'sz': '0.00112', 'oid': '33226768302', 'timestamp': '1749128777266', 'triggerCondition': 'N/A', 'isTrigger': False, 'triggerPx': '0.0', 'children': [], 'isPositionTpsl': False, 'reduceOnly': False, 'orderType': 'Limit', 'origSz': '0.00112', 'tif': 'Gtc', 'cloid': None}, 'status': 'open', 'statusTimestamp': '1749128777266'}, 'id': '33226768302', 'clientOrderId': None, 'timestamp': 1749128777266, 'datetime': '2025-06-05T13:06:17.266Z', 'lastTradeTimestamp': None, 'lastUpdateTimestamp': 1749128777266, 'symbol': 'BTC/USDC:USDC', 'type': 'limit', 'timeInForce': 'GTC', 'postOnly': False, 'reduceOnly': False, 'side': 'sell', 'price': 106040.0, 'triggerPrice': None, 'amount': 0.00112, 'cost': 0.0, 'average': None, 'filled': 0.0, 'remaining': 0.00112, 'status': 'open', 'fee': None, 'trades': [], 'fees': [], 'stopPrice': None, 'takeProfitPrice': None, 'stopLossPrice': None}\n",
-      "[MAPPER] MissingValueError: missing value for field \"info.coin\"\n",
-      "[MAPPER] Nouvelle tentative de parsing Order avec data={'info': {'order': {'coin': 'BTC', 'side': 'A', 'limitPx': '106040.0', 'sz': '0.00112', 'oid': '33226768302', 'timestamp': '1749128777266', 'triggerCondition': 'N/A', 'isTrigger': False, 'triggerPx': '0.0', 'children': [], 'isPositionTpsl': False, 'reduceOnly': False, 'orderType': 'Limit', 'origSz': '0.00112', 'tif': 'Gtc', 'cloid': None}, 'status': 'open', 'statusTimestamp': '1749128777266', 'coin': '', 'side': '', 'limitPx': '', 'sz': '', 'oid': '', 'timestamp': '', 'triggerCondition': '', 'isTrigger': False, 'triggerPx': '', 'children': [], 'isPositionTpsl': False, 'reduceOnly': False, 'orderType': '', 'origSz': '', 'tif': '', 'cloid': ''}, 'id': '33226768302', 'clientOrderId': '', 'timestamp': 1749128777266, 'datetime': '2025-06-05T13:06:17.266Z', 'lastTradeTimestamp': 0, 'lastUpdateTimestamp': 1749128777266, 'symbol': 'BTC/USDC:USDC', 'type': 'limit', 'timeInForce': 'GTC', 'postOnly': False, 'reduceOnly': False, 'side': 'sell', 'price': 106040.0, 'triggerPrice': 0.0, 'amount': 0.00112, 'cost': 0.0, 'average': 0.0, 'filled': 0.0, 'remaining': 0.00112, 'status': 'open', 'fee': '', 'trades': [], 'fees': [], 'stopPrice': 0.0, 'takeProfitPrice': 0.0, 'stopLossPrice': 0.0}\n",
-      " --> Close long order created: Order(info=Info(coin='', side='', limitPx='', sz='', oid='', timestamp='', triggerCondition='', isTrigger=False, triggerPx='', children=[], isPositionTpsl=False, reduceOnly=False, orderType='', origSz='', tif='', cloid=''), id='33226768302', clientOrderId='', timestamp=1749128777266, datetime='2025-06-05T13:06:17.266Z', lastTradeTimestamp=0, lastUpdateTimestamp=1749128777266, symbol='BTC/USDC:USDC', type='limit', timeInForce='GTC', postOnly=False, reduceOnly=False, side='sell', price=106040.0, triggerPrice=0.0, amount=0.00112, cost=0.0, average=0.0, filled=0.0, remaining=0.00112, status='open', fee='', trades=[], fees=[], stopPrice=0.0, takeProfitPrice=0.0, stopLossPrice=0.0)\n"
+      "2025-06-08 14:47:04,771 - src.generic.algo - INFO - 0Creating open long order: 0.001147618470475812 at 105593.0\n",
+      "2025-06-08 14:47:04,772 - src.generic.cctx_api - INFO - api - Creating buy limit order: 0.001147618470475812 at 105593.0\n",
+      "2025-06-08 14:47:06,438 - src.generic.algo - INFO - 0 --> Creating close long order: 0.001147618470475812 at 105793.0\n",
+      "2025-06-08 14:47:06,438 - src.generic.cctx_api - INFO - api - Creating sell limit order: 0.001147618470475812 at 105793.0\n"
      ]
     }
    ],
