Add events in sqlite

--- a/src/generic/main.ipynb
+++ b/src/generic/main.ipynb
@@ -6,11 +6,12 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-08T12:46:55.376209Z",
-     "start_time": "2025-06-08T12:46:55.368994Z"
+     "end_time": "2025-06-11T20:53:25.525143Z",
+     "start_time": "2025-06-11T20:53:25.515883Z"
     }
    },
    "source": [
+    "\n",
     "def exception_handler(exc_type, exc_value, exc_traceback):\n",
     "    # Ne pas intercepter les interruptions clavier\n",
     "    if issubclass(exc_type, KeyboardInterrupt):\n",
@@ -20,13 +21,13 @@
     "    print(\"\".join(traceback.format_exception(exc_type, exc_value, exc_traceback)))"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-08T12:47:08.316454Z",
-     "start_time": "2025-06-08T12:46:55.445800Z"
+     "end_time": "2025-06-11T20:53:40.937701Z",
+     "start_time": "2025-06-11T20:53:28.062063Z"
     }
    },
    "cell_type": "code",
@@ -36,6 +37,7 @@
     "import logging\n",
     "import traceback\n",
     "import sys\n",
+    "from src.data.db.sqlite_data_service import SQLiteDataService\n",
     "\n",
     "# Configuration du logging pour afficher les traces d'erreur complètes\n",
     "logging.basicConfig(level=logging.INFO,\n",
@@ -47,7 +49,9 @@
     "from src.generic.cctx_api import Dex\n",
     "\n",
     "dex = Dex(symbol='BTC', marginCoin='USDC')\n",
-    "algo = Algo(dex=dex, max_leverage=30)\n",
+    "\n",
+    "data_service = SQLiteDataService()\n",
+    "algo = Algo(dex=dex, data_service=data_service, max_leverage=30)\n",
     "algo.setup_initial_positions()\n",
     "#algo.recover_previous_state()\n",
     "hyperliquid_observer = HyperliquidObserver(address='0x765EaafC85566466EF63bc3D3e1f507526b6Cc82', algo=algo)\n",
@@ -59,32 +63,121 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-08 14:46:55,952 - src.generic.algo - INFO - Setting up initial positions...\n",
-      "2025-06-08 14:46:55,954 - src.generic.algo - INFO - Setting leverage to 30 for cross margin trading\n",
-      "2025-06-08 14:47:03,163 - src.generic.algo - INFO - Available amount to trade: 727.771434 - Current price: 105693.0 - Single position quantity : 0.001147618470475812\n",
-      "2025-06-08 14:47:03,165 - src.generic.cctx_api - INFO - Buying 0.00573809235237906 at market price : 105693.0\n",
-      "2025-06-08 14:47:03,166 - src.generic.cctx_api - INFO - api - Creating buy market order: 0.00573809235237906 at 105693.0\n"
+      "2025-06-11 22:53:28,069 - src.generic.algo - INFO - Session ID set to: 5fd718cb-c5b0-41fd-9084-1234f8f992f5\n",
+      "2025-06-11 22:53:28,070 - src.generic.algo - INFO - Setting up initial positions...\n",
+      "2025-06-11 22:53:28,070 - src.generic.algo - INFO - Setting leverage to 30 for cross margin trading\n",
+      "2025-06-11 22:53:36,042 - src.generic.algo - INFO - Available amount to trade: 326.450122 - Current price: 108876.0 - Single position quantity : 0.0004997277055243274\n",
+      "2025-06-11 22:53:36,043 - src.generic.cctx_api - INFO - Buying 0.002498638527621637 at market price : 108876.0\n",
+      "2025-06-11 22:53:36,043 - src.generic.cctx_api - INFO - api - Creating buy market order: 0.002498638527621637 at 108876.0\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial buy quantity: 0.00573809235237906 - unit : 0.00573809235237906\n"
+      "Initial buy quantity: 0.002498638527621637 - unit : 0.002498638527621637\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-08 14:47:04,771 - src.generic.algo - INFO - 0Creating open long order: 0.001147618470475812 at 105593.0\n",
-      "2025-06-08 14:47:04,772 - src.generic.cctx_api - INFO - api - Creating buy limit order: 0.001147618470475812 at 105593.0\n",
-      "2025-06-08 14:47:06,438 - src.generic.algo - INFO - 0 --> Creating close long order: 0.001147618470475812 at 105793.0\n",
-      "2025-06-08 14:47:06,438 - src.generic.cctx_api - INFO - api - Creating sell limit order: 0.001147618470475812 at 105793.0\n"
+      "2025-06-11 22:53:37,604 - src.generic.algo - INFO - 0Creating open long order: 0.0004997277055243274 at 108776.0\n",
+      "2025-06-11 22:53:37,605 - src.generic.cctx_api - INFO - api - Creating buy limit order: 0.0004997277055243274 at 108776.0\n",
+      "2025-06-11 22:53:39,124 - src.data.db.sqlite_data_service - INFO - Processing new buy position: BTC/USDC:USDC - LONG\n",
+      "2025-06-11 22:53:39,127 - src.generic.algo - INFO - 0 --> Creating close long order: 0.0004997277055243274 at 108976.0\n",
+      "2025-06-11 22:53:39,127 - src.generic.cctx_api - INFO - api - Creating sell limit order: 0.0004997277055243274 at 108976.0\n",
+      "2025-06-11 22:53:40,932 - src.data.db.sqlite_data_service - INFO - Processing new sell position: BTC/USDC:USDC - SHORT\n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-11T06:03:38.424136Z",
+     "start_time": "2025-06-11T06:03:38.420921Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "data_service.get_all_sessions()\n",
+    "data_service.get_observations_by_session('3548695f-c96a-4f89-9f47-7bb62a989d21')"
+   ],
+   "id": "105b2427d2117edd",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 1,\n",
+       "  'event_type': 'position',\n",
+       "  'symbol': 'BTC/USDC:USDC',\n",
+       "  'user_address': 'unknown',\n",
+       "  'session_id': '3548695f-c96a-4f89-9f47-7bb62a989d21',\n",
+       "  'timestamp': '2025-06-10T22:31:07.133986',\n",
+       "  'data': '{\"event_type\": \"position\", \"symbol\": \"BTC/USDC:USDC\", \"user_address\": \"unknown\", \"session_id\": \"3548695f-c96a-4f89-9f47-7bb62a989d21\", \"timestamp\": \"2025-06-10T22:31:07.133986\", \"data\": {\"side\": \"LONG\", \"size\": \"0.000989375545320504\", \"entry_price\": \"109545.0\", \"unrealized_pnl\": null, \"realized_pnl\": null, \"leverage\": null, \"margin_used\": null, \"liquidation_price\": null}, \"source\": \"hyperliquid_observer\", \"status\": \"created\"}',\n",
+       "  'oid': None,\n",
+       "  'price': None,\n",
+       "  'status': 'created',\n",
+       "  'source': 'hyperliquid_observer',\n",
+       "  'created_at': '2025-06-10 20:31:07'},\n",
+       " {'id': 2,\n",
+       "  'event_type': 'position',\n",
+       "  'symbol': 'BTC/USDC:USDC',\n",
+       "  'user_address': 'unknown',\n",
+       "  'session_id': '3548695f-c96a-4f89-9f47-7bb62a989d21',\n",
+       "  'timestamp': '2025-06-10T22:31:08.868412',\n",
+       "  'data': '{\"event_type\": \"position\", \"symbol\": \"BTC/USDC:USDC\", \"user_address\": \"unknown\", \"session_id\": \"3548695f-c96a-4f89-9f47-7bb62a989d21\", \"timestamp\": \"2025-06-10T22:31:08.868412\", \"data\": {\"side\": \"SHORT\", \"size\": \"0.000989375545320504\", \"entry_price\": \"109745.0\", \"unrealized_pnl\": null, \"realized_pnl\": null, \"leverage\": null, \"margin_used\": null, \"liquidation_price\": null}, \"source\": \"hyperliquid_observer\", \"status\": \"created\"}',\n",
+       "  'oid': None,\n",
+       "  'price': None,\n",
+       "  'status': 'created',\n",
+       "  'source': 'hyperliquid_observer',\n",
+       "  'created_at': '2025-06-10 20:31:08'},\n",
+       " {'id': 3,\n",
+       "  'event_type': 'position',\n",
+       "  'symbol': 'BTC',\n",
+       "  'user_address': 'unknown',\n",
+       "  'session_id': '3548695f-c96a-4f89-9f47-7bb62a989d21',\n",
+       "  'timestamp': '2025-06-10T22:38:10.701641',\n",
+       "  'data': '{\"event_type\": \"position\", \"symbol\": \"BTC\", \"user_address\": \"unknown\", \"session_id\": \"3548695f-c96a-4f89-9f47-7bb62a989d21\", \"timestamp\": \"2025-06-10T22:38:10.701641\", \"data\": {\"side\": \"SHORT\", \"size\": \"0.0\", \"entry_price\": \"109745.0\", \"unrealized_pnl\": null, \"realized_pnl\": null, \"leverage\": null, \"margin_used\": null, \"liquidation_price\": null}, \"source\": \"hyperliquid_observer\", \"status\": \"filled\"}',\n",
+       "  'oid': None,\n",
+       "  'price': None,\n",
+       "  'status': 'filled',\n",
+       "  'source': 'hyperliquid_observer',\n",
+       "  'created_at': '2025-06-10 20:38:10'},\n",
+       " {'id': 4,\n",
+       "  'event_type': 'position',\n",
+       "  'symbol': 'BTC/USDC:USDC',\n",
+       "  'user_address': 'unknown',\n",
+       "  'session_id': '3548695f-c96a-4f89-9f47-7bb62a989d21',\n",
+       "  'timestamp': '2025-06-10T22:38:12.319423',\n",
+       "  'data': '{\"event_type\": \"position\", \"symbol\": \"BTC/USDC:USDC\", \"user_address\": \"unknown\", \"session_id\": \"3548695f-c96a-4f89-9f47-7bb62a989d21\", \"timestamp\": \"2025-06-10T22:38:12.319423\", \"data\": {\"side\": \"LONG\", \"size\": \"0.0009884767491305604\", \"entry_price\": \"109645.0\", \"unrealized_pnl\": null, \"realized_pnl\": null, \"leverage\": null, \"margin_used\": null, \"liquidation_price\": null}, \"source\": \"hyperliquid_observer\", \"status\": \"created\"}',\n",
+       "  'oid': None,\n",
+       "  'price': None,\n",
+       "  'status': 'created',\n",
+       "  'source': 'hyperliquid_observer',\n",
+       "  'created_at': '2025-06-10 20:38:12'},\n",
+       " {'id': 5,\n",
+       "  'event_type': 'position',\n",
+       "  'symbol': 'BTC/USDC:USDC',\n",
+       "  'user_address': 'unknown',\n",
+       "  'session_id': '3548695f-c96a-4f89-9f47-7bb62a989d21',\n",
+       "  'timestamp': '2025-06-10T22:38:13.949657',\n",
+       "  'data': '{\"event_type\": \"position\", \"symbol\": \"BTC/USDC:USDC\", \"user_address\": \"unknown\", \"session_id\": \"3548695f-c96a-4f89-9f47-7bb62a989d21\", \"timestamp\": \"2025-06-10T22:38:13.949657\", \"data\": {\"side\": \"SHORT\", \"size\": \"0.0009884767491305604\", \"entry_price\": \"109845.0\", \"unrealized_pnl\": null, \"realized_pnl\": null, \"leverage\": null, \"margin_used\": null, \"liquidation_price\": null}, \"source\": \"hyperliquid_observer\", \"status\": \"created\"}',\n",
+       "  'oid': None,\n",
+       "  'price': None,\n",
+       "  'status': 'created',\n",
+       "  'source': 'hyperliquid_observer',\n",
+       "  'created_at': '2025-06-10 20:38:13'}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
   },
   {
    "metadata": {},
